Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Allow_All_Data__c.field-meta.xml
<CustomField>
    <fullName>Allow_All_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow All Data</label>
    <type>Checkbox</type>
</CustomField>