Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Condition_Key__c.field-meta.xml
<CustomField>
    <fullName>Condition_Key__c</fullName>
    <label>Condition Key</label>
    <length>242</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>