Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>