Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Insert__c.field-meta.xml
<CustomField>
    <fullName>Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert</label>
    <type>Checkbox</type>
</CustomField>