Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>