Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>