Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Subscriber_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Code__c</fullName>
    <label>Subscriber Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>