Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Undelete__c.field-meta.xml
<CustomField>
    <fullName>Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undelete</label>
    <type>Checkbox</type>
</CustomField>