Dummy_Package_for_scratch_org/main/default/objects/Data_Change_Event_Condition__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>